# movie-reviews

./: .gitignore  README.md  helpers.py  index.html  main.py  models.py  movie_reviews.ipynb  preprocess.py  pyproject.toml
api/: helpers.py  main.py  models.py
ml_training/: movie_reviews.ipynb  pyproject.toml
shared/: pyproject.toml
shared-lib/: pyproject.toml
shared-lib/src/shared_lib/: model_store.py  preprocessing.py
shared/src/: modelstore.py  preprocess.py
web/: index.html
