[project]
name = "shared-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Olamilekan Akintilebo", email = "olamilekanakintilebo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "nltk>=3.9.4",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
